<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.daftneeks.julius.flashstudy.QuizFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/questionRow"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            >

            <com.daftneeks.julius.flashstudy.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/cardQuestion"
                android:padding="8dp"
                android:gravity="center" />
        </TableRow>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardImageView"
            android:layout_below="@+id/questionRow"
            android:layout_above="@+id/doneStudyingButton"
            android:contentDescription="@string/card_image"
            android:layout_marginBottom="18dp"
            android:background="@drawable/edit_text_background" />

            <Button
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/doneStudyingButton"
                android:background="@drawable/button_background"
                android:text="@string/done_studying" />

            <Button
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/flipCardButton"
                android:background="@drawable/button_background"
                android:text="@string/reveal_card" />

    </RelativeLayout>

</FrameLayout>
